Module 5/m05a05triangles-handout/grading/2024-10-03-11-01-25/compile.err
Triangles.java:30: error: ';' expected
        System.out.println(angle)
                                 ^
1 error
